feat: add upload image by claude code

--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -1,6 +1,7 @@
 name = "introduction-maker-api"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
 
 # D1 Database
 [[d1_databases]]
@@ -16,6 +17,7 @@ bucket_name = "introduction-maker-images"
 # Environment Variables
 [vars]
 ENVIRONMENT = "development"
+API_BASE_URL = "http://localhost:8787"
 
 # KV (必要に応じて)
 # [[kv_namespaces]]
