--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "dev": "npm run dev --workspaces",
     "lint": "npm run lint --workspaces",
     "type-check": "npm run type-check --workspaces",
