--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,24 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "build:static": "next build && next export",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
+    "@introduction-maker/shared": "file:../../packages/shared",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.0.0",
+    "lucide-react": "^0.290.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "framer-motion": "^10.0.0",
-    "@hookform/resolvers": "^3.0.0",
     "react-hook-form": "^7.0.0",
-    "zod": "^3.22.0",
-    "lucide-react": "^0.290.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "@introduction-maker/shared": "file:../../packages/shared"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
