feat: fix service binding rpc by claude

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:static": "next build && next export",
     "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:deploy": "npm run pages:build && npx wrangler pages deploy .vercel/output/static --project-name=introduction-maker",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
